--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "dev": "parcel src/index.pug --open",
-    "build": "parcel build src/index.pug --no-source-files"
+    "build": "parcel build src/index.pug --no-source-maps"
   },
   "keywords": [],
   "author": "",
